// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1s5rk9y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1s5rk9y-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1s5rk9y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1s5rk9y-StyledToggle:focus-within,
.cache-1s5rk9y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1s5rk9y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1s5rk9y-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1s5rk9y-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-1s5rk9y-StyledToggle[data-error='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-1s5rk9y-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-r95p0q-StyledLabel e1wstm610"
    >
      <div
        class="cache-155uuxj-Stack ehpbis70"
      />
      <div
        class="cache-1s5rk9y-StyledToggle e1wstm612"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="cache-1myp2ct-StyledCheckbox e1wstm611"
          id=":r0:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1s5rk9y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1s5rk9y-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1s5rk9y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1s5rk9y-StyledToggle:focus-within,
.cache-1s5rk9y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1s5rk9y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1s5rk9y-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1s5rk9y-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-1s5rk9y-StyledToggle[data-error='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-1s5rk9y-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-r95p0q-StyledLabel e1wstm610"
    >
      <div
        class="cache-155uuxj-Stack ehpbis70"
      />
      <div
        class="cache-1s5rk9y-StyledToggle e1wstm612"
        data-checked="true"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="cache-1myp2ct-StyledCheckbox e1wstm611"
          id=":r4:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1s5rk9y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1s5rk9y-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1s5rk9y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1s5rk9y-StyledToggle:focus-within,
.cache-1s5rk9y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1s5rk9y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1s5rk9y-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1s5rk9y-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-1s5rk9y-StyledToggle[data-error='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-1s5rk9y-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="cache-r95p0q-StyledLabel e1wstm610"
    >
      <div
        class="cache-155uuxj-Stack ehpbis70"
      />
      <div
        class="cache-1s5rk9y-StyledToggle e1wstm612"
        data-checked="false"
        data-disabled="true"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="cache-1myp2ct-StyledCheckbox e1wstm611"
          disabled=""
          id=":r2:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1s5rk9y-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1s5rk9y-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1s5rk9y-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1s5rk9y-StyledToggle:focus-within,
.cache-1s5rk9y-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1s5rk9y-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1s5rk9y-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1s5rk9y-StyledToggle[data-checked='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1s5rk9y-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1s5rk9y-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-1s5rk9y-StyledToggle[data-error='true']:focus-within,
.cache-1s5rk9y-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-1s5rk9y-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-r95p0q-StyledLabel e1wstm610"
    >
      <div
        class="cache-155uuxj-Stack ehpbis70"
      >
        <div
          class="cache-15fwcc4-StyledRow e3f5lzv0"
        >
          test
        </div>
      </div>
      <div
        class="cache-1s5rk9y-StyledToggle e1wstm612"
        data-checked="true"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="cache-1myp2ct-StyledCheckbox e1wstm611"
          id=":r6:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;
